--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,26 +4,25 @@
 
 
 		<!-- Start your code here -->
-		<header class="mt-4">
-			<h1>Welcome to My WEB700 Site</h1>
-			<p>Welcome to my website, I will be demonstrating HTML5 principles and techniques, Routing in Express...</p>
-		</header>
+<header class="mt-4">
+	<h1>Welcome to My WEB700 Site</h1>
+	<p>Welcome to my site! Here, I'll be showcasing principles and techniques in HTML5, along with demonstrating routing capabilities in Express...</p>
 
-		<section>
-			<h2>Site Overview</h2>
-			<p>This site consists of 3 static views (Home, About, HTML Demo) as well as 5 routes that supply data, including: 
-			<a href="/students">All Students</a>, 
-			<a href="/students?course=3">Students by Course</a>, 
-			<a href="/student/2">A Single Student By Student Number</a>, 
-			<a href="/tas">All Managers</a>, and 
-			<a href="/courses">All Courses</a>.
-			</p>
-		</section>
+<section>
+	<h2>Site Overview</h2>
+	<p>This website is structured with three static pages: Home, About, and HTML Demo. Additionally, it features five data-providing routes, including: 
+    <a href="/students">All Students</a>, 
+    <a href="/students?course=3">Students Filtered by Course</a>, 
+    <a href="/student/2">Individual Student Details by Student Number</a>, 
+    <a href="/tas">Complete List of Managers</a>, and 
+    <a href="/courses">Comprehensive Course Catalog</a>.
+</p>
+</section>
 
-		<section>
-			<h2>HTML5 in Action</h2>
-			<p>This site utilizes HTML5, the latest evolution of the standard that defines HTML, to showcase a variety of web content.</p>
-		</section>
+<section>
+	<h2>HTML5 Demonstrated</h2>
+<p>This website leverages HTML5, the most recent update to the HTML standard, to display diverse web content.</p>
+</section>
 
 
 
