--- a/views/about.hbs
+++ b/views/about.hbs
@@ -12,10 +12,10 @@
 
 <section>
     <h2>My Background</h2>
-    <p>My name is Oluwademilade, student ID 125970228 from the BTT program. Embarking on this journey has been both challenging and rewarding. From an early age, I've been fascinated by technology and its potential to change the world. This passion led me to pursue a career in web development, where I can use my creativity and problem-solving skills to build innovative web applications.</p>
-    <p>Throughout my studies, I've had the opportunity to learn various programming languages, like python and presently i am learning, HTML, CSS, JavaScript, and Node.js. These tools have enabled me to design and develop dynamic, user-friendly websites that cater to the needs of users. My projects range from simple websites and in the future i hope to build complex web applications that solve real-world problems.</p>
-    <p>Beyond my academic pursuits, I'm an avid learner who spends a considerable amount of time experimenting with new technologies and staying updated with industry trends. I believe that continuous learning is the key to being successful in this ever-evolving field. When I'm not learning how to code, I enjoy playing football, photography, and watching movies.</p>
-    <p>Looking forward, I'm excited about the opportunities that lie ahead. My goal is to be very good at what i do.</p>
+    <p>My name is Daniel, student ID 147137228 from the BTT program. Embarking on this journey has been both challenging and rewarding. From an early age, I've been fascinated by technology and its potential to change the world. This passion led me to pursue a career in web development, where I can use my creativity and problem-solving skills to build innovative web applications.</p>
+    <p>In my academic journey, I've had the pleasure of delving into various programming realms, including Python. Recently, I've ventured into the intricacies of HTML, CSS, JavaScript, and Node.js. These tools have been instrumental in my ability to craft dynamic, intuitive websites tailored to user needs. My portfolio spans from basic web pages to, as I envision for the future, sophisticated web applications aimed at addressing tangible problems.</p>
+    <p>Beyond my educational endeavors, I am deeply committed to self-improvement and regularly dedicate time to exploring emerging technologies and keeping abreast of current industry standards. I believe that perpetual education is crucial for staying relevant and excelling in the fast-paced tech landscape. Outside of coding, my interests include football, exploring the art of photography, and immersing myself in the cinematic world.</p>
+    <p>As I look to the future, I am filled with enthusiasm for the potential paths and projects that await. My aim is to excel in my field, continuously enhancing my skills and contributing innovative solutions to the tech community.</p>
 </section>
 
 
